src/objects/OCD_Deal_Assessment__c.object
<CustomObject>
    <description>Deal Assessment Summary</description>
    <fields>
        <fullName>Annualized_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annualized Revenue</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Customer_Name__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumable_ASP_YR1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consumable ASP YR1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Length_months__c</fullName>
        <formula>Quote__r.OCD_Term_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Length (months)*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Years__c</fullName>
        <label>Contract Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Accessory_Cash_Purchase__c</fullName>
        <description>Cost for Accessories with cash purchase</description>
        <label>Cost Accessory Cash Purchase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Accessory__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Accessory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Consumables__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Consumables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Equipment_Cash_Purchase__c</fullName>
        <description>Cost of Equipment with cash purchase</description>
        <label>Cost Equipment Cash Purchase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Equipment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_MPAUDA3P__c</fullName>
        <label>Cost MPA/UDA/3P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Other_Automation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Other Automation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Reagent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Reagent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Service__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Total__c</fullName>
        <formula>Cost_Accessory__c + Cost_Equipment__c + Cost_Consumables__c + Cost_Other__c + Cost_Service__c + Cost_Reagent__c + Other_Cost_One_Time__c + Other_Cost_Recurring__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_Hurdle_Reagent_DIff__c</fullName>
        <formula>Reagents_GP__c - Country_Hurdle_Reagent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Hurdle Reagent DIff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Hurdle_Reagent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country Hurdle Reagent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Hurdle__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country Hurdle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Overall_GP_Diff__c</fullName>
        <formula>Overall_GP__c -  Country_Hurdle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Overall GP Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Overall_GP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country Overall GP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Reagent_GP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country Reagent GP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Customer_Name__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Deal_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Customer_Name__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBITDA_Avg_Yr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EBITDA (Avg/Yr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBITDA_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EBITDA % Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Reagent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Green Reagent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Green</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>Total_Revenue__c -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Quote Id</description>
        <externalId>true</externalId>
        <label>Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Indicator_Random__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indicator Random</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Major_LOB__c</fullName>
        <label>Major LOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Cost_LOB__c</fullName>
        <formula>IF(Quote__r.OCD_Total_Annual_Revenue_CC__c &gt; 0, &quot;CC&quot;, 
IF(Quote__r.OCD_Total_Annual_Revenue_IA__c &gt; 0, &quot;IA&quot;, 
IF(Quote__r.OCD_Total_Annual_Revenue_CAT__c &gt; 0, &quot;CAT&quot;, 
IF(Quote__r.OCD_Total_Annual_Usage_Volume_Trad_IH__c &gt; 0, &quot;Trad IH&quot;, 
&quot;&quot;
))))</formula>
        <label>Other Cost LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cost_One_Time__c</fullName>
        <label>Other Cost One Time</label>
        <summarizedField>Deal_Assessment_Cost__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Deal_Assessment_Cost__c.Type__c</field>
            <operation>equals</operation>
            <value>One Time</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Assessment_Cost__c.Deal_Assessment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Cost_Recurring__c</fullName>
        <label>Other Cost Recurring</label>
        <summarizedField>Deal_Assessment_Cost__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Deal_Assessment_Cost__c.Type__c</field>
            <operation>equals</operation>
            <value>Recurring</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Assessment_Cost__c.Deal_Assessment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Flex__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overall Flex</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overall_GP_Color__c</fullName>
        <formula>IF( (Overall_GP__c *100) &gt;= Green__c ,&quot;panel-green&quot;, 
IF( (Overall_GP__c * 100) &gt;=  Yellow__c ,&quot;panel-yellow&quot;, &quot;panel-red&quot;))</formula>
        <label>Overall GP Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_GP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overall GP%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payback_Yrs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payback (Yrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipName>Deal_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reagent_Flex__c</fullName>
        <label>Reagent Flex</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reagent_GP_Color__c</fullName>
        <formula>IF( (Reagents_GP__c * 100) &gt; Green_Reagent__c ,&quot;panel-green&quot;, 
IF( (Reagents_GP__c * 100) &gt;=  Yellow_Reagent__c ,&quot;panel-yellow&quot;, &quot;panel-red&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reagent GP Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reagent_GP_Diff__c</fullName>
        <formula>Reagents_GP__c - Country_Reagent_GP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reagent GP Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reagents_GP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reagents GP%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Red_Reagent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Red Reagent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Red__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Red</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Accessory_Cash_Purchase__c</fullName>
        <description>Revenue for Accessories for Cash Purchase</description>
        <label>Revenue Accessory Cash Purchase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Accessory__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Accessory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Consumables__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Consumables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Equipment_Cash_Purchase__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Revenue for Equipment Cash Purchase Only</description>
        <label>Revenue Equipment Cash Purchase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Equipment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_MPAUDA3P__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue MPA/UDA/3P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Other_Automation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Other Automation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Reagent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Reagent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Service__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Total__c</fullName>
        <formula>Revenue_Accessory__c + Revenue_Equipment__c + Revenue_Consumables__c + Revenue_Other__c + Revenue_Service__c + Revenue_Reagent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Customer__c</fullName>
        <formula>TEXT(Customer_Name__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Local_Currency__c</fullName>
        <label>User Local Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yellow_Reagent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yellow Reagent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yellow__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yellow</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Assessment</label>
    <nameField>
        <label>Deal Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>